--- a/src/App.scss
+++ b/src/App.scss
@@ -9,7 +9,7 @@ body {
   margin-left: 1em;
 }
 
-.card {
+/*.card {
   background: #fff;
   border-radius: 2px;
   margin: 1rem;
@@ -18,7 +18,18 @@ body {
   box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
   align-items: center;
   /* justify-content: center; */
-  border-radius: 35px;
+  /*border-radius: 35px;
+}*/
+
+.card {
+  background: #fff;
+  position: relative;
+  border: none;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+  align-items: center;
+  border-radius: 20px;
+  padding: 1em;
+  margin-bottom: 0.5em;;
 }
 
 .text-center {
@@ -27,7 +38,8 @@ body {
 
 .background-image-card {
   /* height: 35em; */
-  height: 40em;
+  // height: 40em;
+  height: 25em;
   /* filter: grayscale(50%); */
 }
 
@@ -46,7 +58,7 @@ body {
   width: 40em;
   height: 18em;
   box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
-  border-radius: 25px;
+  border-radius: 20px;
   position: absolute;
   padding: 2em;
   text-align: left;
