--- a/src/App.scss
+++ b/src/App.scss
@@ -1,9 +1,193 @@
 // Bootstrap and its default variables
 @import "../node_modules/bootstrap/scss/bootstrap";
+@import url('https://fonts.googleapis.com/css2?family=Damion&display=swap');
+
+/* outfit-100 - latin */
+@font-face {
+  font-family: 'Outfit';
+  font-style: normal;
+  font-weight: 100;
+  src: url('fonts/outfit-v5-latin-100.eot');
+  /* IE9 Compat Modes */
+  src: local(''),
+    url('fonts/outfit-v5-latin-100.eot?#iefix') format('embedded-opentype'),
+    /* IE6-IE8 */
+    url('fonts/outfit-v5-latin-100.woff2') format('woff2'),
+    /* Super Modern Browsers */
+    url('fonts/outfit-v5-latin-100.woff') format('woff'),
+    /* Modern Browsers */
+    url('fonts/outfit-v5-latin-100.ttf') format('truetype'),
+    /* Safari, Android, iOS */
+    url('fonts/outfit-v5-latin-100.svg#Outfit') format('svg');
+  /* Legacy iOS */
+}
+
+/* outfit-200 - latin */
+@font-face {
+  font-family: 'Outfit';
+  font-style: normal;
+  font-weight: 200;
+  src: url('fonts/outfit-v5-latin-200.eot');
+  /* IE9 Compat Modes */
+  src: local(''),
+    url('fonts/outfit-v5-latin-200.eot?#iefix') format('embedded-opentype'),
+    /* IE6-IE8 */
+    url('fonts/outfit-v5-latin-200.woff2') format('woff2'),
+    /* Super Modern Browsers */
+    url('fonts/outfit-v5-latin-200.woff') format('woff'),
+    /* Modern Browsers */
+    url('fonts/outfit-v5-latin-200.ttf') format('truetype'),
+    /* Safari, Android, iOS */
+    url('fonts/outfit-v5-latin-200.svg#Outfit') format('svg');
+  /* Legacy iOS */
+}
+
+/* outfit-300 - latin */
+@font-face {
+  font-family: 'Outfit';
+  font-style: normal;
+  font-weight: 300;
+  src: url('fonts/outfit-v5-latin-300.eot');
+  /* IE9 Compat Modes */
+  src: local(''),
+    url('fonts/outfit-v5-latin-300.eot?#iefix') format('embedded-opentype'),
+    /* IE6-IE8 */
+    url('fonts/outfit-v5-latin-300.woff2') format('woff2'),
+    /* Super Modern Browsers */
+    url('fonts/outfit-v5-latin-300.woff') format('woff'),
+    /* Modern Browsers */
+    url('fonts/outfit-v5-latin-300.ttf') format('truetype'),
+    /* Safari, Android, iOS */
+    url('fonts/outfit-v5-latin-300.svg#Outfit') format('svg');
+  /* Legacy iOS */
+}
+
+/* outfit-regular - latin */
+@font-face {
+  font-family: 'Outfit';
+  font-style: normal;
+  font-weight: 400;
+  src: url('fonts/outfit-v5-latin-regular.eot');
+  /* IE9 Compat Modes */
+  src: local(''),
+    url('fonts/outfit-v5-latin-regular.eot?#iefix') format('embedded-opentype'),
+    /* IE6-IE8 */
+    url('fonts/outfit-v5-latin-regular.woff2') format('woff2'),
+    /* Super Modern Browsers */
+    url('fonts/outfit-v5-latin-regular.woff') format('woff'),
+    /* Modern Browsers */
+    url('fonts/outfit-v5-latin-regular.ttf') format('truetype'),
+    /* Safari, Android, iOS */
+    url('fonts/outfit-v5-latin-regular.svg#Outfit') format('svg');
+  /* Legacy iOS */
+}
+
+/* outfit-500 - latin */
+@font-face {
+  font-family: 'Outfit';
+  font-style: normal;
+  font-weight: 500;
+  src: url('fonts/outfit-v5-latin-500.eot');
+  /* IE9 Compat Modes */
+  src: local(''),
+    url('fonts/outfit-v5-latin-500.eot?#iefix') format('embedded-opentype'),
+    /* IE6-IE8 */
+    url('fonts/outfit-v5-latin-500.woff2') format('woff2'),
+    /* Super Modern Browsers */
+    url('fonts/outfit-v5-latin-500.woff') format('woff'),
+    /* Modern Browsers */
+    url('fonts/outfit-v5-latin-500.ttf') format('truetype'),
+    /* Safari, Android, iOS */
+    url('fonts/outfit-v5-latin-500.svg#Outfit') format('svg');
+  /* Legacy iOS */
+}
+
+/* outfit-600 - latin */
+@font-face {
+  font-family: 'Outfit';
+  font-style: normal;
+  font-weight: 600;
+  src: url('fonts/outfit-v5-latin-600.eot');
+  /* IE9 Compat Modes */
+  src: local(''),
+    url('fonts/outfit-v5-latin-600.eot?#iefix') format('embedded-opentype'),
+    /* IE6-IE8 */
+    url('fonts/outfit-v5-latin-600.woff2') format('woff2'),
+    /* Super Modern Browsers */
+    url('fonts/outfit-v5-latin-600.woff') format('woff'),
+    /* Modern Browsers */
+    url('fonts/outfit-v5-latin-600.ttf') format('truetype'),
+    /* Safari, Android, iOS */
+    url('fonts/outfit-v5-latin-600.svg#Outfit') format('svg');
+  /* Legacy iOS */
+}
+
+/* outfit-700 - latin */
+@font-face {
+  font-family: 'Outfit';
+  font-style: normal;
+  font-weight: 700;
+  src: url('fonts/outfit-v5-latin-700.eot');
+  /* IE9 Compat Modes */
+  src: local(''),
+    url('fonts/outfit-v5-latin-700.eot?#iefix') format('embedded-opentype'),
+    /* IE6-IE8 */
+    url('fonts/outfit-v5-latin-700.woff2') format('woff2'),
+    /* Super Modern Browsers */
+    url('fonts/outfit-v5-latin-700.woff') format('woff'),
+    /* Modern Browsers */
+    url('fonts/outfit-v5-latin-700.ttf') format('truetype'),
+    /* Safari, Android, iOS */
+    url('fonts/outfit-v5-latin-700.svg#Outfit') format('svg');
+  /* Legacy iOS */
+}
+
+/* outfit-800 - latin */
+@font-face {
+  font-family: 'Outfit';
+  font-style: normal;
+  font-weight: 800;
+  src: url('fonts/outfit-v5-latin-800.eot');
+  /* IE9 Compat Modes */
+  src: local(''),
+    url('fonts/outfit-v5-latin-800.eot?#iefix') format('embedded-opentype'),
+    /* IE6-IE8 */
+    url('fonts/outfit-v5-latin-800.woff2') format('woff2'),
+    /* Super Modern Browsers */
+    url('fonts/outfit-v5-latin-800.woff') format('woff'),
+    /* Modern Browsers */
+    url('fonts/outfit-v5-latin-800.ttf') format('truetype'),
+    /* Safari, Android, iOS */
+    url('fonts/outfit-v5-latin-800.svg#Outfit') format('svg');
+  /* Legacy iOS */
+}
+
+/* outfit-900 - latin */
+@font-face {
+  font-family: 'Outfit';
+  font-style: normal;
+  font-weight: 900;
+  src: url('fonts/outfit-v5-latin-900.eot');
+  /* IE9 Compat Modes */
+  src: local(''),
+    url('fonts/outfit-v5-latin-900.eot?#iefix') format('embedded-opentype'),
+    /* IE6-IE8 */
+    url('fonts/outfit-v5-latin-900.woff2') format('woff2'),
+    /* Super Modern Browsers */
+    url('fonts/outfit-v5-latin-900.woff') format('woff'),
+    /* Modern Browsers */
+    url('fonts/outfit-v5-latin-900.ttf') format('truetype'),
+    /* Safari, Android, iOS */
+    url('fonts/outfit-v5-latin-900.svg#Outfit') format('svg');
+  /* Legacy iOS */
+}
+
 
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family: "Outfit" !important;
 }
+
+
 
 .page-header {
   margin-left: 1em;
@@ -18,7 +202,7 @@ body {
   box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
   align-items: center;
   /* justify-content: center; */
-  /*border-radius: 35px;
+/*border-radius: 35px;
 }*/
 
 .card {
@@ -29,7 +213,8 @@ body {
   align-items: center;
   border-radius: 20px;
   padding: 1em;
-  margin-bottom: 0.5em;;
+  margin-bottom: 0.5em;
+  ;
 }
 
 .text-center {
@@ -46,9 +231,11 @@ body {
 .health-leaf {
   background-image: url('health-leaf.jpg')
 }
+
 .sick-leaf {
-  background-image: url('sick-leaf.jpg') 
+  background-image: url('sick-leaf.jpg')
 }
+
 .dead-leaf {
   background-image: url('dead-leaf.jpg')
 }
@@ -57,7 +244,7 @@ body {
   background: white;
   width: 40em;
   height: 18em;
-  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
   border-radius: 20px;
   position: absolute;
   padding: 2em;
@@ -70,7 +257,7 @@ body {
   margin-right: .1em;
 }
 
-.sensor-info h1, 
+.sensor-info h1,
 .sensor-info h4 {
   display: inline;
 
@@ -86,15 +273,22 @@ body {
   font-weight: bold;
 }
 
+
+
+
+
+
+
 html {
-  min-width: 400px;
+  min-width: 1760px !important;
 }
 
-h2, h5{
-  font-weight: 700!important;
+h2,
+h5 {
+  font-weight: 700 !important;
   /*color: rgba(149, 151, 152, 1);*/
   color: #2d2b3c;
-  margin-top: .5em!important;
+  margin-top: .5em !important;
 }
 
 .background-image {
@@ -113,6 +307,17 @@ h2, h5{
   position: relative;
 }
 
+.avatar-2 {
+  background: url("images/avatar2.png");
+  background-position: 63%;
+  // background-size: 123%;
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 200px;
+  // border: 5px solid white;
+  position: relative;
+}
+
 .avatar-description {
   font-weight: 600;
   font-size: 1.8em;
@@ -124,7 +329,8 @@ h2, h5{
 }
 
 .short-description {
-  background: rgba(211, 211, 211, .4);;
+  background: rgba(211, 211, 211, .4);
+  ;
   padding: 0.5em;
 }
 
@@ -133,15 +339,16 @@ h2, h5{
 }
 
 .contacts {
-    list-style: none;
+  list-style: none;
 }
+
 .contacts a {
   color: black
 }
 
-@media (max-width: 700px){
+@media (max-width: 700px) {
   .avatar {
-      margin: 1em auto;
+    margin: 1em auto;
   }
 }
 
@@ -152,7 +359,8 @@ h2, h5{
   font-style: normal;
 }
 
-[class^="icon-"]:before, [class*=" icon-"]:before {
+[class^="icon-"]:before,
+[class*=" icon-"]:before {
   font-family: "icons";
   font-style: normal;
   font-weight: normal;
@@ -170,19 +378,30 @@ h2, h5{
   color: black;
 }
 
-.inverted [class^="icon-"]:before, .inverted [class*=" icon-"]:before {
+.inverted [class^="icon-"]:before,
+.inverted [class*=" icon-"]:before {
   color: white;
 }
 
-.icon-linkedin:before { content: '\e800'; }
+.icon-linkedin:before {
+  content: '\e800';
+}
 
-.icon-github:before { content: '\e801'; }
+.icon-github:before {
+  content: '\e801';
+}
 
-.icon-mail:before { content: '\e802'; }
+.icon-mail:before {
+  content: '\e802';
+}
 
-.icon-phone:before { content: '\e803'; }
+.icon-phone:before {
+  content: '\e803';
+}
 
-.icon-skype:before { content: '\e804'; }
+.icon-skype:before {
+  content: '\e804';
+}
 
 .vertical-col-sm {
   vertical-align: middle;
@@ -216,4 +435,315 @@ h2, h5{
 /* // Your variable overrides */
 .bg-header-synthwave {
   background-color: #9519B1;
+}
+
+
+
+
+
+
+
+
+
+* {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+
+  box-sizing: border-box;
+}
+
+html,
+body {
+  height: 100%;
+  width: 100%;
+}
+
+body {
+  font-family: sans-serif;
+  line-height: 1.4;
+}
+
+h1 {
+  font-size: 150%;
+}
+
+p {
+  margin-bottom: 10px;
+}
+
+.paddingBlock {
+  padding: 20px 0;
+}
+
+.eqWrap {
+  display: flex;
+}
+
+.eq {
+  padding: 10px;
+}
+
+.eq:nth-of-type(odd) {
+  background: #FF0000;
+  opacity: 10%;
+}
+
+.eq:nth-of-type(even) {
+  background: #FF0000;
+  opacity: 10%;
+}
+
+.equalHW {
+  flex: 1;
+}
+
+.equalHMWrap {
+  justify-content: space-between;
+  height: 100%;
+}
+
+.equalHM {
+  width: 10%;
+  height: 100%;
+  margin-right: 2%;
+}
+
+.equalHM:last-child {
+  margin-right: 0px;
+}
+
+.equalHMRWrap {
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.equalHMR {
+  width: 32%;
+  margin-bottom: 2%;
+}
+
+.equalHMVWrap {
+  flex-wrap: wrap;
+}
+
+.equalHMV {
+  width: 75px;
+  margin-right: 15px;
+}
+
+.equalHMV:nth-of-type(3n) {
+  margin-right: 0;
+}
+
+.equalHMV:nth-of-type(3n+1) {
+  margin-left: 0;
+}
+
+.container.bg-absolute {
+  position: absolute !important;
+  left: 0 !important;
+  right: 0 !important;
+  margin-left: auto !important;
+  margin-right: auto !important;
+  height: 100%;
+}
+
+div#app {
+  position: relative;
+  height: 100%;
+}
+
+.h1-main-title {
+  font-size: 75px;
+  position: relative;
+  left: -5px;
+}
+
+.h1-main-title-2 {
+  font-size: 75px;
+  position: relative;
+  // right: -180px;
+  right: -270px;
+}
+
+.h1 {
+  position: relative;
+  top: -95px;
+  font-weight: 900;
+  // font-size: 64px;
+  color: #414141;
+}
+
+.yfc-img {
+  background: url("images/YFC.png");
+  background-size: 100%;
+  background-repeat: no-repeat;
+  position: relative;
+  width: 270px;
+  height: 540px;
+  top: -185px;
+  left: -55px;
+  // cursor: pointer;
+}
+
+.bin-img {
+  background: url("images/BIN.png");
+  background-size: 100%;
+  background-repeat: no-repeat;
+  position: relative;
+  width: 270px;
+  height: 540px;
+  top: 150px;
+  left: -260px;
+  // cursor: pointer;
+}
+
+.fg-img {
+  background: url("images/FG.png");
+  background-size: 100%;
+  background-repeat: no-repeat;
+  width: 780px;
+  height: 470px;
+  position: relative;
+  top: -610px;
+  left: 440px;
+  // cursor: pointer;
+}
+
+.flex-inside {
+  // display: flex;
+  // align-content: center;
+  // flex-wrap: nowrap;
+  // flex-direction: row;
+  // align-items: center;
+  // justify-content: flex-end;
+}
+
+.info-circle {
+  position: absolute;
+  width: 300px;
+  height: 40px;
+  border-radius: 5px;
+  background: white;
+  z-index: 3;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  /* font-family: Damion; */
+  font-weight: 500;
+  font-size: 20px;
+  // box-shadow: 0px 2px 6px #000;
+  box-shadow: 0px 2px 6px rgb(0, 0, 0.25);
+}
+
+$marginSize: 150px;
+// $workExamplesMargin: 30px;
+.work-examples {
+  position: relative;
+  top: -30px;
+  text-align: left;
+  width: 100%;
+  color: #414141;
+  font-size: 30px;
+}
+
+.info-circle-yfc {
+  top: 315px+$marginSize+50px;
+  left: 484px;
+}
+
+.info-circle-bin {
+  top: 885px+$marginSize+50px;
+  left: 550px;
+
+}
+
+.info-circle-fg {
+  top: 830px+$marginSize+50px;
+  left: 1195px;
+}
+
+.text-underline {
+  text-decoration: underline 5px #00A9E7;
+  margin-bottom: $marginSize;
+}
+
+
+
+// .container {
+//   min-width: 1140px!important;
+//   max-width: 1140px!important;
+// }
+
+
+// @media (min-width: 1200px) {
+
+//   .container,
+//   .container-sm,
+//   .container-md,
+//   .container-lg,
+//   .container-xl {
+//     max-width: 1140px;
+//   }
+// }
+
+// @media (min-width: 992px) {
+
+//   .container,
+//   .container-sm,
+//   .container-md,
+//   .container-lg {
+//     max-width: 1140px;
+//   }
+// }
+
+// @media (min-width: 768px) {
+
+//   .container,
+//   .container-sm,
+//   .container-md {
+//     max-width: 1140px;
+//   }
+// }
+
+@media (min-width: 0px) and (max-width: 1200px) {
+
+  .container,
+  .container-sm {
+    max-width: 1140px !important;
+  }
+}
+
+.info-circle-wrapper {
+  position: relative;
+  left: -321px;
+  top: -50px;
+}
+
+
+.modal-button {
+  position: relative;
+  width: 50px;
+  height: 50px;
+  z-index: 1;
+}
+
+.ReactModalPortal {
+  z-index: 999;
+  position: relative;
+}
+
+.ReactModal__Content.ReactModal__Content--after-open {
+  z-index: 999;
+  overflow: hidden;
+}
+
+.ReactModalPortal .close-button {
+  position: absolute;
+  right: 30px;
+  cursor: pointer;
+  font-family: 'Outfit';
+  font-weight: 900;
+  font-size: 40px;
 }
