--- a/src/App.scss
+++ b/src/App.scss
@@ -205,6 +205,24 @@
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 .page-header {
   margin-left: 1em;
 }
@@ -221,16 +239,25 @@
 /*border-radius: 35px;
 }*/
 
+
+// background: #fff;
+// position: relative;
+// border: none;
+// box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+// align-items: center;
+// border-radius: 20px;
+// padding: 1em;
+// margin-bottom: 0.5em;
+
 .card {
-  background: #fff;
+  background: #fff !important;
   position: relative;
   border: none;
-  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
   align-items: center;
-  border-radius: 20px;
-  padding: 1em;
+  border-radius: 6px;
+  padding: 10px !important;
   margin-bottom: 0.5em;
-  ;
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 }
 
 .text-center {
@@ -303,7 +330,7 @@ h2,
 h5 {
   font-weight: 700 !important;
   /*color: rgba(149, 151, 152, 1);*/
-  color: #2d2b3c;
+  // color: #2d2b3c;
   margin-top: .5em !important;
 }
 
@@ -325,21 +352,16 @@ h5 {
 
 .avatar-2 {
   background: url("images/avatar2.png");
-  background-position: 90% 10%;
+  background-position: 80% 50%;
   background-repeat: no-repeat;
   background-size: 50%;
-  height: 200px;
+  height: 185px;
   position: relative;
 }
 
 .avatar-description {
-  font-weight: 600;
+  font-weight: 900;
   font-size: 1.8em;
-  /*text-shadow: -1px 0 #ffffff, 0 1px white, 1px 0 white, 0 -1px white;*/
-  color: #2d2b3c;
-  margin-top: .5em;
-  background: rgba(255, 255, 255, 0.5);
-  padding: 0.5em;
 }
 
 .short-description {
@@ -357,7 +379,7 @@ h5 {
 }
 
 .contacts a {
-  color: black
+  color: #414141;
 }
 
 @media (max-width: 700px) {
@@ -702,6 +724,7 @@ div#app {
   text-align: left;
   width: 100%;
   color: #414141;
+  font-weight: 700;
   // font-size: 30px;
 }
 
@@ -832,7 +855,7 @@ div#app {
 .ReactModal__Content.ReactModal__Content--after-open {
   z-index: 999;
   overflow: hidden;
-  padding: 100px !important;
+  padding: 50px !important;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
   border-radius: 20px;
 
@@ -847,7 +870,8 @@ div#app {
     border: none;
 
     .modal-image {
-      width: 20%;
+      width: 25%;
+      height: auto;
       display: inline-flex;
     }
 
@@ -916,17 +940,129 @@ div#app {
 body {
   font-family: "Outfit" !important;
   color: #414141;
-  min-width: 300px!important;
+  min-width: 300px !important;
 }
 
 .h1 {
-  font-size: calc(1.525rem + 3.3vw)!important;
+  font-size: calc(1.525rem + 3.3vw) !important;
 }
 
-.h3 {
-  font-size: calc(0.2rem + 3.3vw) !important;
+.h5 {
+  // font-size: calc(0.1rem + 2vw) !important;
 }
 
 .container {
   // border: 5px solid red;
+}
+
+.new-avatar {
+  max-width: 50%;
+  height: auto;
+  margin: 5%;
+}
+
+.flex-centered {
+  display: flex;
+  align-content: center;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: nowrap;
+  flex-direction: row;
+}
+
+@media (max-width: 575.98px) {
+  .col-sm.flex-centered {
+    justify-content: flex-end;
+  }
+
+  .new-avatar {
+    max-width: 20%;
+    height: auto;
+    margin: 0;
+  }
+
+  .ReactModal__Content.ReactModal__Content--after-open {
+    .modal-image {
+      width: 100%;
+      height: auto;
+      display: inline-flex;
+    }
+
+    .fgModal .modal-image {
+      width: calc(100vh*0.3);
+    }
+
+    .modal-description {
+      padding: 10px;
+      font-size: calc(0.1rem + 1.5vw) !important;
+    }
+  }
+
+}
+
+.modal-image {
+  width: calc(100vh*0.4);
+  height: auto;
+  display: inline-flex;
+}
+
+.fgModal .modal-image {
+  width: calc(100vh*0.8);
+}
+
+.modal-description {
+  padding: 50px;
+  font-size: calc(0.1rem + 1vw) !important;
+}
+
+.full-height {
+  height: 100%;
+}
+
+.bg-img {
+  width: 100%;
+}
+
+.main-section {
+  background-color: white;
+}
+
+.work-examples-section {
+  // padding-top: 10px;
+  padding-bottom: 10px;
+  background-color: white;
+}
+
+section {
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+.examples-section {
+  // padding-top: 20px;
+  // padding-bottom: 20px;
+}
+
+.examples-section-2 {
+  // padding-top: 20px;
+  // padding-bottom: 20px;
+  // margin-top: 10px;
+  // margin-bottom: 10px;
+  background-color: white;
+}
+
+.fg-image {
+  max-width: 70%;
+  height: auto;
+}
+
+// .row.text-underline 
+#aboutMe.about-me {
+  // width: 40px;
+  // /* height: 40px; */
+  background-color: #8cb05d;
+  border-radius: 5%;
+  text-decoration: none !important;
+  cursor: pointer;
+  padding: 5px;
 }
