--- a/src/App.scss
+++ b/src/App.scss
@@ -1,9 +1,227 @@
 // Bootstrap and its default variables
 @import "../node_modules/bootstrap/scss/bootstrap";
+@import url('https://fonts.googleapis.com/css2?family=Damion&display=swap');
 
-body {
-  font-family: 'Roboto', sans-serif;
+/* outfit-100 - latin */
+@font-face {
+  font-family: 'Outfit';
+  font-style: normal;
+  font-weight: 100;
+  src: url('fonts/outfit-v5-latin-100.eot');
+  /* IE9 Compat Modes */
+  src: local(''),
+    url('fonts/outfit-v5-latin-100.eot?#iefix') format('embedded-opentype'),
+    /* IE6-IE8 */
+    url('fonts/outfit-v5-latin-100.woff2') format('woff2'),
+    /* Super Modern Browsers */
+    url('fonts/outfit-v5-latin-100.woff') format('woff'),
+    /* Modern Browsers */
+    url('fonts/outfit-v5-latin-100.ttf') format('truetype'),
+    /* Safari, Android, iOS */
+    url('fonts/outfit-v5-latin-100.svg#Outfit') format('svg');
+  /* Legacy iOS */
 }
+
+/* outfit-200 - latin */
+@font-face {
+  font-family: 'Outfit';
+  font-style: normal;
+  font-weight: 200;
+  src: url('fonts/outfit-v5-latin-200.eot');
+  /* IE9 Compat Modes */
+  src: local(''),
+    url('fonts/outfit-v5-latin-200.eot?#iefix') format('embedded-opentype'),
+    /* IE6-IE8 */
+    url('fonts/outfit-v5-latin-200.woff2') format('woff2'),
+    /* Super Modern Browsers */
+    url('fonts/outfit-v5-latin-200.woff') format('woff'),
+    /* Modern Browsers */
+    url('fonts/outfit-v5-latin-200.ttf') format('truetype'),
+    /* Safari, Android, iOS */
+    url('fonts/outfit-v5-latin-200.svg#Outfit') format('svg');
+  /* Legacy iOS */
+}
+
+/* outfit-300 - latin */
+@font-face {
+  font-family: 'Outfit';
+  font-style: normal;
+  font-weight: 300;
+  src: url('fonts/outfit-v5-latin-300.eot');
+  /* IE9 Compat Modes */
+  src: local(''),
+    url('fonts/outfit-v5-latin-300.eot?#iefix') format('embedded-opentype'),
+    /* IE6-IE8 */
+    url('fonts/outfit-v5-latin-300.woff2') format('woff2'),
+    /* Super Modern Browsers */
+    url('fonts/outfit-v5-latin-300.woff') format('woff'),
+    /* Modern Browsers */
+    url('fonts/outfit-v5-latin-300.ttf') format('truetype'),
+    /* Safari, Android, iOS */
+    url('fonts/outfit-v5-latin-300.svg#Outfit') format('svg');
+  /* Legacy iOS */
+}
+
+/* outfit-regular - latin */
+@font-face {
+  font-family: 'Outfit';
+  font-style: normal;
+  font-weight: 400;
+  src: url('fonts/outfit-v5-latin-regular.eot');
+  /* IE9 Compat Modes */
+  src: local(''),
+    url('fonts/outfit-v5-latin-regular.eot?#iefix') format('embedded-opentype'),
+    /* IE6-IE8 */
+    url('fonts/outfit-v5-latin-regular.woff2') format('woff2'),
+    /* Super Modern Browsers */
+    url('fonts/outfit-v5-latin-regular.woff') format('woff'),
+    /* Modern Browsers */
+    url('fonts/outfit-v5-latin-regular.ttf') format('truetype'),
+    /* Safari, Android, iOS */
+    url('fonts/outfit-v5-latin-regular.svg#Outfit') format('svg');
+  /* Legacy iOS */
+}
+
+/* outfit-500 - latin */
+@font-face {
+  font-family: 'Outfit';
+  font-style: normal;
+  font-weight: 500;
+  src: url('fonts/outfit-v5-latin-500.eot');
+  /* IE9 Compat Modes */
+  src: local(''),
+    url('fonts/outfit-v5-latin-500.eot?#iefix') format('embedded-opentype'),
+    /* IE6-IE8 */
+    url('fonts/outfit-v5-latin-500.woff2') format('woff2'),
+    /* Super Modern Browsers */
+    url('fonts/outfit-v5-latin-500.woff') format('woff'),
+    /* Modern Browsers */
+    url('fonts/outfit-v5-latin-500.ttf') format('truetype'),
+    /* Safari, Android, iOS */
+    url('fonts/outfit-v5-latin-500.svg#Outfit') format('svg');
+  /* Legacy iOS */
+}
+
+/* outfit-600 - latin */
+@font-face {
+  font-family: 'Outfit';
+  font-style: normal;
+  font-weight: 600;
+  src: url('fonts/outfit-v5-latin-600.eot');
+  /* IE9 Compat Modes */
+  src: local(''),
+    url('fonts/outfit-v5-latin-600.eot?#iefix') format('embedded-opentype'),
+    /* IE6-IE8 */
+    url('fonts/outfit-v5-latin-600.woff2') format('woff2'),
+    /* Super Modern Browsers */
+    url('fonts/outfit-v5-latin-600.woff') format('woff'),
+    /* Modern Browsers */
+    url('fonts/outfit-v5-latin-600.ttf') format('truetype'),
+    /* Safari, Android, iOS */
+    url('fonts/outfit-v5-latin-600.svg#Outfit') format('svg');
+  /* Legacy iOS */
+}
+
+/* outfit-700 - latin */
+@font-face {
+  font-family: 'Outfit';
+  font-style: normal;
+  font-weight: 700;
+  src: url('fonts/outfit-v5-latin-700.eot');
+  /* IE9 Compat Modes */
+  src: local(''),
+    url('fonts/outfit-v5-latin-700.eot?#iefix') format('embedded-opentype'),
+    /* IE6-IE8 */
+    url('fonts/outfit-v5-latin-700.woff2') format('woff2'),
+    /* Super Modern Browsers */
+    url('fonts/outfit-v5-latin-700.woff') format('woff'),
+    /* Modern Browsers */
+    url('fonts/outfit-v5-latin-700.ttf') format('truetype'),
+    /* Safari, Android, iOS */
+    url('fonts/outfit-v5-latin-700.svg#Outfit') format('svg');
+  /* Legacy iOS */
+}
+
+/* outfit-800 - latin */
+@font-face {
+  font-family: 'Outfit';
+  font-style: normal;
+  font-weight: 800;
+  src: url('fonts/outfit-v5-latin-800.eot');
+  /* IE9 Compat Modes */
+  src: local(''),
+    url('fonts/outfit-v5-latin-800.eot?#iefix') format('embedded-opentype'),
+    /* IE6-IE8 */
+    url('fonts/outfit-v5-latin-800.woff2') format('woff2'),
+    /* Super Modern Browsers */
+    url('fonts/outfit-v5-latin-800.woff') format('woff'),
+    /* Modern Browsers */
+    url('fonts/outfit-v5-latin-800.ttf') format('truetype'),
+    /* Safari, Android, iOS */
+    url('fonts/outfit-v5-latin-800.svg#Outfit') format('svg');
+  /* Legacy iOS */
+}
+
+/* outfit-900 - latin */
+@font-face {
+  font-family: 'Outfit';
+  font-style: normal;
+  font-weight: 900;
+  src: url('fonts/outfit-v5-latin-900.eot');
+  /* IE9 Compat Modes */
+  src: local(''),
+    url('fonts/outfit-v5-latin-900.eot?#iefix') format('embedded-opentype'),
+    /* IE6-IE8 */
+    url('fonts/outfit-v5-latin-900.woff2') format('woff2'),
+    /* Super Modern Browsers */
+    url('fonts/outfit-v5-latin-900.woff') format('woff'),
+    /* Modern Browsers */
+    url('fonts/outfit-v5-latin-900.ttf') format('truetype'),
+    /* Safari, Android, iOS */
+    url('fonts/outfit-v5-latin-900.svg#Outfit') format('svg');
+  /* Legacy iOS */
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 .page-header {
   margin-left: 1em;
@@ -18,18 +236,28 @@ body {
   box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
   align-items: center;
   /* justify-content: center; */
-  /*border-radius: 35px;
+/*border-radius: 35px;
 }*/
 
+
+// background: #fff;
+// position: relative;
+// border: none;
+// box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+// align-items: center;
+// border-radius: 20px;
+// padding: 1em;
+// margin-bottom: 0.5em;
+
 .card {
-  background: #fff;
+  background: #fff !important;
   position: relative;
   border: none;
-  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
   align-items: center;
-  border-radius: 20px;
-  padding: 1em;
-  margin-bottom: 0.5em;;
+  border-radius: 6px;
+  padding: 10px !important;
+  margin-bottom: 0.5em;
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 }
 
 .text-center {
@@ -46,9 +274,11 @@ body {
 .health-leaf {
   background-image: url('health-leaf.jpg')
 }
+
 .sick-leaf {
-  background-image: url('sick-leaf.jpg') 
+  background-image: url('sick-leaf.jpg')
 }
+
 .dead-leaf {
   background-image: url('dead-leaf.jpg')
 }
@@ -57,7 +287,7 @@ body {
   background: white;
   width: 40em;
   height: 18em;
-  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
   border-radius: 20px;
   position: absolute;
   padding: 2em;
@@ -70,7 +300,7 @@ body {
   margin-right: .1em;
 }
 
-.sensor-info h1, 
+.sensor-info h1,
 .sensor-info h4 {
   display: inline;
 
@@ -86,15 +316,22 @@ body {
   font-weight: bold;
 }
 
+
+
+
+
+
+
 html {
-  min-width: 400px;
+  // min-width: 720px;
 }
 
-h2, h5{
-  font-weight: 700!important;
+h2,
+h5 {
+  font-weight: 700 !important;
   /*color: rgba(149, 151, 152, 1);*/
-  color: #2d2b3c;
-  margin-top: .5em!important;
+  // color: #2d2b3c;
+  margin-top: .5em !important;
 }
 
 .background-image {
@@ -113,18 +350,23 @@ h2, h5{
   position: relative;
 }
 
+.avatar-2 {
+  background: url("images/avatar2.png");
+  background-position: 80% 50%;
+  background-repeat: no-repeat;
+  background-size: 50%;
+  height: 185px;
+  position: relative;
+}
+
 .avatar-description {
-  font-weight: 600;
+  font-weight: 900;
   font-size: 1.8em;
-  /*text-shadow: -1px 0 #ffffff, 0 1px white, 1px 0 white, 0 -1px white;*/
-  color: #2d2b3c;
-  margin-top: .5em;
-  background: rgba(255, 255, 255, 0.5);
-  padding: 0.5em;
 }
 
 .short-description {
-  background: rgba(211, 211, 211, .4);;
+  background: rgba(211, 211, 211, .4);
+  ;
   padding: 0.5em;
 }
 
@@ -133,15 +375,16 @@ h2, h5{
 }
 
 .contacts {
-    list-style: none;
-}
-.contacts a {
-  color: black
+  list-style: none;
 }
 
-@media (max-width: 700px){
+.contacts a {
+  color: #414141;
+}
+
+@media (max-width: 700px) {
   .avatar {
-      margin: 1em auto;
+    margin: 1em auto;
   }
 }
 
@@ -152,7 +395,8 @@ h2, h5{
   font-style: normal;
 }
 
-[class^="icon-"]:before, [class*=" icon-"]:before {
+[class^="icon-"]:before,
+[class*=" icon-"]:before {
   font-family: "icons";
   font-style: normal;
   font-weight: normal;
@@ -170,19 +414,30 @@ h2, h5{
   color: black;
 }
 
-.inverted [class^="icon-"]:before, .inverted [class*=" icon-"]:before {
+.inverted [class^="icon-"]:before,
+.inverted [class*=" icon-"]:before {
   color: white;
 }
 
-.icon-linkedin:before { content: '\e800'; }
+.icon-linkedin:before {
+  content: '\e800';
+}
 
-.icon-github:before { content: '\e801'; }
+.icon-github:before {
+  content: '\e801';
+}
 
-.icon-mail:before { content: '\e802'; }
+.icon-mail:before {
+  content: '\e802';
+}
 
-.icon-phone:before { content: '\e803'; }
+.icon-phone:before {
+  content: '\e803';
+}
 
-.icon-skype:before { content: '\e804'; }
+.icon-skype:before {
+  content: '\e804';
+}
 
 .vertical-col-sm {
   vertical-align: middle;
@@ -216,4 +471,598 @@ h2, h5{
 /* // Your variable overrides */
 .bg-header-synthwave {
   background-color: #9519B1;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+* {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+
+  box-sizing: border-box;
+}
+
+html,
+body {
+  height: 100%;
+  width: 100%;
+}
+
+body {
+  font-family: sans-serif;
+  line-height: 1.4;
+}
+
+h1 {
+  font-size: 150%;
+}
+
+p {
+  margin-bottom: 10px;
+}
+
+.paddingBlock {
+  padding: 20px 0;
+}
+
+.eqWrap {
+  display: flex;
+}
+
+.eq {
+  padding: 10px;
+}
+
+.eq:nth-of-type(odd) {
+  background: #FF0000;
+  opacity: 10%;
+}
+
+.eq:nth-of-type(even) {
+  background: #FF0000;
+  opacity: 10%;
+}
+
+.equalHW {
+  flex: 1;
+}
+
+.equalHMWrap {
+  justify-content: space-between;
+  height: 100%;
+}
+
+.equalHM {
+  width: 10%;
+  height: 100%;
+  margin-right: 2%;
+}
+
+.equalHM:last-child {
+  margin-right: 0px;
+}
+
+.equalHMRWrap {
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.equalHMR {
+  width: 32%;
+  margin-bottom: 2%;
+}
+
+.equalHMVWrap {
+  flex-wrap: wrap;
+}
+
+.equalHMV {
+  width: 75px;
+  margin-right: 15px;
+}
+
+.equalHMV:nth-of-type(3n) {
+  margin-right: 0;
+}
+
+.equalHMV:nth-of-type(3n+1) {
+  margin-left: 0;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.row {
+  flex-direction: row;
+  align-content: center;
+  justify-content: center;
+  align-items: center;
+}
+
+.container.bg-absolute {
+  position: absolute !important;
+  left: 0 !important;
+  right: 0 !important;
+  margin-left: auto !important;
+  margin-right: auto !important;
+  height: 100%;
+}
+
+div#app {
+  position: relative;
+  height: 100%;
+  background: #f6f9fc;
+}
+
+.h1-main-title {
+  // font-size: 75px;
+  width: 100%;
+  position: relative;
+  // left: -15px;
+  text-align: left;
+}
+
+.h1-main-title-2 {
+  // font-size: 75px;
+  width: 100%;
+  position: relative;
+  text-align: right;
+  // left: 15px;
+  // right: -180px;
+  // right: -270px;
+}
+
+.h1 {
+  position: relative;
+  // top: -95px;
+  font-weight: 900;
+  // font-size: 64px;
+  color: #414141;
+}
+
+.yfc-img {
+  background: url("images/YFC.png");
+  background-size: 100%;
+  background-repeat: no-repeat;
+  position: relative;
+  width: 200px;
+  height: 540px;
+  // top: -185px;
+  // left: -55px;
+  // cursor: pointer;
+}
+
+.bin-img {
+  background: url("images/BIN.png");
+  background-size: 100%;
+  background-repeat: no-repeat;
+  position: relative;
+  width: 270px;
+  height: 540px;
+  // top: 150px;
+  // left: -260px;
+  // cursor: pointer;
+}
+
+.fg-img {
+  background: url("images/FG.png");
+  background-size: 100%;
+  background-repeat: no-repeat;
+  width: 780px;
+  height: 470px;
+  position: relative;
+  // top: -610px;
+  // left: 440px;
+  // cursor: pointer;
+}
+
+// .flex-inside {
+//   display: flex;
+//   align-content: center;
+//   flex-wrap: nowrap;
+//   flex-direction: row;
+//   align-items: center;
+//   justify-content: flex-end;
+// }
+
+.info-circle {
+  // position: absolute;
+  width: 300px;
+  height: 40px;
+  border-radius: 5px;
+  background: white;
+  z-index: 3;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  /* font-family: Damion; */
+  font-weight: 500;
+  // font-size: 20px;
+  // box-shadow: 0px 2px 6px #000;
+  // box-shadow: 0px 2px 6px rgb(0, 0, 0.25);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+}
+
+// $marginSize: 150px;
+
+// $workExamplesMargin: 30px;
+.work-examples {
+  position: relative;
+  // top: -30px;
+  text-align: left;
+  width: 100%;
+  color: #414141;
+  font-weight: 700;
+  // font-size: 30px;
+}
+
+// .info-circle-yfc {
+//   top: 315px+$marginSize+50px;
+//   left: 484px;
+// }
+
+// .info-circle-bin {
+//   top: 885px+$marginSize+50px;
+//   left: 550px;
+
+// }
+
+// .info-circle-fg {
+//   top: 830px+$marginSize+50px;
+//   left: 1195px;
+// }
+
+.text-underline {
+  text-decoration: underline 5px #00A9E7;
+  // margin-bottom: $marginSize;
+}
+
+
+
+// .container {
+//   min-width: 1140px!important;
+//   max-width: 1140px!important;
+// }
+
+
+// @media (min-width: 1200px) {
+
+//   .container,
+//   .container-sm,
+//   .container-md,
+//   .container-lg,
+//   .container-xl {
+//     max-width: 1140px;
+//   }
+// }
+
+// @media (min-width: 992px) {
+
+//   .container,
+//   .container-sm,
+//   .container-md,
+//   .container-lg {
+//     max-width: 1140px;
+//   }
+// }
+
+// @media (min-width: 768px) {
+
+//   .container,
+//   .container-sm,
+//   .container-md {
+//     max-width: 1140px;
+//   }
+// }
+
+@media (min-width: 0px) and (max-width: 1200) {
+  body {
+    min-width: 1200;
+  }
+
+  // .container,
+  // .container-sm {
+  //   max-width: 1140px !important;
+  // }
+}
+
+.info-circle-wrapper {
+  position: relative;
+  // left: -321px;
+  // top: -50px;
+}
+
+
+.modal-button {
+  position: relative;
+  width: 50px;
+  height: 50px;
+  z-index: 1;
+}
+
+.ReactModalPortal {
+  z-index: 999;
+  position: relative;
+}
+
+// .ReactModal__Content.ReactModal__Content--after-open {
+//   z-index: 999;
+//   overflow: hidden;
+//   padding: 300px !important;
+//   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+//   border-radius: 20px;
+
+//   .modal-content {
+//     display: flex;
+//     flex-direction: row;
+//     flex-wrap: nowrap;
+//     align-content: center;
+//     justify-content: center;
+//     align-items: center;
+//     height: 100% !important;
+//     border: none;
+
+//     .modal-image {
+//       width: 250px;
+//       display: inline-flex;
+//     }
+
+//     .modal-description {
+//       padding: 50px;
+//       font-size: 1em;
+
+//     }
+//   }
+//   .fgModal.modal-content {
+//     .modal-image {
+//       width: 700px;
+//     }
+//   }
+// }
+
+.ReactModal__Content.ReactModal__Content--after-open {
+  z-index: 999;
+  overflow: hidden;
+  padding: 50px !important;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+  border-radius: 20px;
+
+  .modal-content {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    align-content: center;
+    justify-content: center;
+    align-items: center;
+    height: 100% !important;
+    border: none;
+
+    .modal-image {
+      width: 25%;
+      height: auto;
+      display: inline-flex;
+    }
+
+    .modal-description {
+      padding: 50px;
+      font-size: calc(0.1rem + 1vw) !important;
+      display: inline-flex;
+      height: 100%;
+      overflow: hidden;
+      align-content: center;
+      justify-content: center;
+      align-items: center;
+      flex-wrap: nowrap;
+      flex-direction: row;
+    }
+  }
+
+  .fgModal.modal-content {
+    .modal-image {
+      // width: 50%;
+    }
+  }
+}
+
+.ReactModalPortal .close-button {
+  position: absolute;
+  top: 30px;
+  right: 50px;
+  cursor: pointer;
+  font-family: 'Outfit';
+  font-weight: 900;
+  // font-size: 40px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.img-size {
+  max-width: 40%;
+  height: auto;
+}
+
+.row-w-bg {
+  // background: white;
+  // position: relative;
+  // border-radius: 10px;
+  // margin-bottom: 1em;
+  // box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+  // padding: 15px;
+}
+
+body {
+  font-family: "Outfit" !important;
+  color: #414141;
+  min-width: 300px !important;
+}
+
+.h1 {
+  font-size: calc(1.525rem + 3.3vw) !important;
+}
+
+.h5 {
+  // font-size: calc(0.1rem + 2vw) !important;
+}
+
+.container {
+  // border: 5px solid red;
+}
+
+.new-avatar {
+  max-width: 50%;
+  height: auto;
+  margin: 5%;
+}
+
+.flex-centered {
+  display: flex;
+  align-content: center;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: nowrap;
+  flex-direction: row;
+}
+
+@media (max-width: 575.98px) {
+  .col-sm.flex-centered {
+    justify-content: flex-end;
+  }
+
+  .new-avatar {
+    max-width: 20%;
+    height: auto;
+    margin: 0;
+  }
+
+  .ReactModal__Content.ReactModal__Content--after-open {
+    .modal-image {
+      width: 100%;
+      height: auto;
+      display: inline-flex;
+    }
+
+    .fgModal .modal-image {
+      width: calc(100vh*0.3);
+    }
+
+    .modal-description {
+      padding: 10px;
+      font-size: calc(0.1rem + 1.5vw) !important;
+    }
+  }
+
+}
+
+.modal-image {
+  width: calc(100vh*0.4);
+  height: auto;
+  display: inline-flex;
+}
+
+.fgModal .modal-image {
+  width: calc(100vh*0.8);
+}
+
+.modal-description {
+  padding: 50px;
+  font-size: calc(0.1rem + 1vw) !important;
+}
+
+.full-height {
+  height: 100%;
+}
+
+.bg-img {
+  width: 100%;
+}
+
+.main-section {
+  background-color: white;
+}
+
+.work-examples-section {
+  // padding-top: 10px;
+  padding-bottom: 10px;
+  background-color: white;
+}
+
+section {
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+.examples-section {
+  // padding-top: 20px;
+  // padding-bottom: 20px;
+}
+
+.examples-section-2 {
+  // padding-top: 20px;
+  // padding-bottom: 20px;
+  // margin-top: 10px;
+  // margin-bottom: 10px;
+  background-color: white;
+}
+
+.fg-image {
+  max-width: 70%;
+  height: auto;
+}
+
+// .row.text-underline 
+#aboutMe.about-me {
+  // width: 40px;
+  // /* height: 40px; */
+  background-color: #8cb05d;
+  border-radius: 5%;
+  text-decoration: none !important;
+  cursor: pointer;
+  padding: 5px;
 }
