--- a/src/App.scss
+++ b/src/App.scss
@@ -1032,14 +1032,18 @@ body {
   width: 100%;
 }
 
+section:nth-child(odd) {
+background-color: white;
+}
+
 .main-section {
-  background-color: white;
+  // background-color: white;
 }
 
 .work-examples-section {
   // padding-top: 10px;
   padding-bottom: 10px;
-  background-color: white;
+  // background-color: white;
 }
 
 section {
@@ -1057,7 +1061,7 @@ section {
   // padding-bottom: 20px;
   // margin-top: 10px;
   // margin-bottom: 10px;
-  background-color: white;
+  // background-color: white;
 }
 
 .fg-image {
